--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -19,9 +19,7 @@ cd /tmp/src && \
 curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz > hplip-3.19.5.tar.gz && \
 tar xvfz hplip-3.19.5.tar.gz && \
 cd hplip-3.19.5 && \
-./configure && \
-make && \
-make install && \
+hplip-install && \
 apk add --no-cache mosquitto-clients jq
 
 #
