--- a/hplip2mqtt/config.json
+++ b/hplip2mqtt/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "hplib to MQTT",
+  "name": "hplip to MQTT",
   "version": "0.1",
-  "slug": "hplib2mqtt",
-  "description": "BETA: Query network printer using hplib (http://hplib.sourceforge.net/) and send ink levels via MQTT",
+  "slug": "hplip2mqtt",
+  "description": "BETA: Query network printer using hplib (http://hplip.sourceforge.net/) and send ink levels via MQTT",
   "url": "https://github.com/james-fry/hassio-addons/tree/master/rtl4332mqtt",
   "startup": "before",
   "boot": "auto",
