--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -17,9 +17,10 @@ RUN \
 apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev cups && \
 mkdir /tmp/src && \
 cd /tmp/src && \
-curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz > hplip-3.19.5.tar.gz && \
-tar xvfz hplip-3.19.5.tar.gz && \
-cd hplip-3.19.5 && \
+curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz 
+#&& \
+#tar xvfz hplip-3.19.5.tar.gz && \
+#cd hplip-3.19.5 && \
 #./configure && \
 #make && \
 #make install && \
