--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -17,9 +17,8 @@ RUN \
 apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev cups && \
 mkdir /tmp/src && \
 cd /tmp/src && \
-curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz
-#&& \
-#tar xvfz hplip.tar.gz
+curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz && \
+tar xvfz hplip.tar.gz
 #&& \
 # cd hplip-3.19.5 && \
 #./configure && \
