--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -18,10 +18,10 @@ apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev 
 mkdir /tmp/src && \
 cd /tmp/src && \
 curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz && \
-tar xvfz hplip.tar.gz
+tar xvfz hplip.tar.gz && \
+cd hplip && \
+./configure
 #&& \
-# cd hplip-3.19.5 && \
-#./configure && \
 #make && \
 #make install && \
 #apk add --no-cache mosquitto-clients jq
