--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -18,9 +18,8 @@ apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev 
 mkdir /tmp/src && \
 cd /tmp/src && \
 curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz && \
-mkdir hplip &&\
-tar xvfz hplip.tar.gz -C hplip && \
-cd hplip
+tar xvfz hplip.tar.gz && \
+cd hplip-3.19.5
 #&& \
 #./configure
 #&& \
