--- a/hplip2mqtt/Dockerfile
+++ b/hplip2mqtt/Dockerfile
@@ -14,14 +14,13 @@ LABEL Description="This image is used to start a script that will monitor for RF
 #
 
 RUN \
-apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev cups cups-dev 
-#&& \
-#mkdir /tmp/src && \
-#cd /tmp/src && \
-#curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz && \
-#tar xvfz hplip.tar.gz && \
-#cd hplip-3.19.5 && \
-#./configure --disable-network-build
+apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev cups cups-dev && \
+mkdir /tmp/src && \
+cd /tmp/src && \
+curl -L https://downloads.sourceforge.net/project/hplip/hplip/3.19.5/hplip-3.19.5.tar.gz -o hplip.tar.gz && \
+tar xvfz hplip.tar.gz && \
+cd hplip-3.19.5 && \
+./configure --disable-network-build
 #&& \
 #make && \
 #make install && \
