start cups and map port

--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -11,6 +11,9 @@ LABEL Description="CUPS for HA"
 
 RUN \
 apk add --no-cache --virtual build-deps alpine-sdk cmake libusb-dev python3-dev cups cups-dev cups-libs cups-client
+
+CMD sudo rc-service cupsd start && sudo rc-update add cupsd
+
 # cups-pdf cups-filters jpeg-dev
 #mkdir /tmp/src && \
 #cd /tmp/src && \
